--- a/build.gradle
+++ b/build.gradle
@@ -1,3 +1,5 @@
+import net.minecraftforge.gradle.user.patcherUser.forge.ForgeExtension
+
 buildscript {
     repositories {
         jcenter()
@@ -29,7 +31,9 @@ minecraft {
 }
 
 dependencies {
-    compile 'org.apache.commons:commons-math3:3.6.1'
+    compile fileTree(dir: '../libs', include: ['*.jar'])
+//    minecraft "net.minecraftforge:forge:1.12.2-14.23.5.2847"
+//    compile 'org.apache.commons:commons-math3:3.6.1'
 }
 
 processResources {
