--- a/.gitignore
+++ b/.gitignore
@@ -117,5 +117,8 @@ run/
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
 
-#graldle.properties
+# graldle.properties
 gradle.properties
+
+# dependency libs
+!libs/*
