--- a/.gitignore
+++ b/.gitignore
@@ -113,6 +113,7 @@ gradle-app.setting
 
 # Common working directory
 run/
+out/
 
 # Avoid ignoring Gradle wrapper jar file (.jar files are usually ignored)
 !gradle-wrapper.jar
@@ -122,3 +123,7 @@ gradle.properties
 
 # dependency libs
 !libs/*
+/output/production/MaschinenBau-Craft.main/assets/mbc/lang/en_us.lang
+/output/production/MaschinenBau-Craft.main/mcmod.info
+/output/production/MaschinenBau-Craft.main/pack.mcmeta
+/output/production/MaschinenBau-Craft.main/assets/mbc/lang/zh_cn.lang
